[package]
name = "mercury-rust"
version = "0.1.0"
authors = ["Darius Clark <darius.clark@nilbytes.com>"]
edition = "2018"
description = "Library that interacts with Mercury Bank API."
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nilbytes/mercury-rust"
keywords = ["banking", "api"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_qs = "0.8"
http = "0.2"
mime = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
